Add Nextcloud auth

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ pygments = "*"
 django-filter = "*"
 django-guardian = "*"
 psycopg2-binary = "*"
+social-auth-app-django = "*"
 
 [dev-packages]
 flake8 = "*"
