--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,11 +8,13 @@
       "name": "Python: Django",
       "type": "python",
       "request": "launch",
-      "program": "${workspaceFolder}\\manage.py",
+      "program": "${workspaceFolder}/manage.py",
       "args": [
-        "runserver"
+        "runserver",
+        "8282",
       ],
-      "django": true
+      "django": true,
+      "envFile": "${workspaceFolder}/.env"
     }
   ]
 }
