--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ django-filter = "*"
 django-guardian = "*"
 psycopg2-binary = "*"
 social-auth-app-django = "*"
+djangorestframework-filters = "==1.0.0.dev2"
 
 [dev-packages]
 flake8 = "*"
