--- a/client/angular.json
+++ b/client/angular.json
@@ -6,6 +6,9 @@
     "client": {
       "projectType": "application",
       "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        },
         "@schematics/angular:application": {
           "strict": true,
           "style": "scss"
@@ -30,7 +33,7 @@
             ],
             "styles": [
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles/bs-theme.scss",
               "src/styles.scss"
             ],
             "scripts": [],
