--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@angular/service-worker": "~13.3.0",
+    "@ngneat/elf": "^1.5.6",
+    "@ngneat/elf-entities": "^4.2.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
