--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@ngneat/elf-entities": "^4.2.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "fuse.js": "^6.5.3",
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
