--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -11,12 +11,12 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api {
+    location /api/ {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $http_host;
         proxy_redirect off;
-        proxy_pass http://127.0.0.1:8080;
+        proxy_pass http://127.0.0.1:8080/api/;
     }
 }
 
