--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -18,6 +18,14 @@ server {
         proxy_redirect off;
         proxy_pass http://127.0.0.1:8080/api/;
     }
+
+    location /static/ {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass http://127.0.0.1:8080/static/;
+    }
 }
 
 upstream draperweb_api {
