--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -11,6 +11,11 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    location ~ ^/static/ {
+        root /app;
+        try_files $uri $uri/;
+    }
+
     location /api/ {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -19,12 +24,12 @@ server {
         proxy_pass http://127.0.0.1:8080/api/;
     }
 
-    location /static/ {
+    location /admin/ {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $http_host;
         proxy_redirect off;
-        proxy_pass http://127.0.0.1:8080/static/;
+        proxy_pass http://127.0.0.1:8080/admin/;
     }
 }
 
