--- a/client/ngsw-config.json
+++ b/client/ngsw-config.json
@@ -4,7 +4,7 @@
   "dataGroups": [
     {
       "name": "api",
-      "urls": ["/api", "/static"],
+      "urls": ["/api", "/admin", "/static"],
       "cacheConfig": {
         "maxSize": 0,
         "maxAge": "0u",
