--- a/client/angular.json
+++ b/client/angular.json
@@ -26,16 +26,11 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.png",
-              "src/assets",
-              "src/manifest.webmanifest"
-            ],
-            "styles": [
-              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-              "src/styles/bs-theme.scss",
-              "src/styles.scss"
-            ],
+            "assets": ["src/favicon.png", "src/assets", "src/manifest.webmanifest"],
+            "styles": ["./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css", "src/styles/theme.scss", "src/styles.scss"],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/styles"]
+            },
             "scripts": [],
             "serviceWorker": true,
             "ngswConfigPath": "ngsw-config.json"
