--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@angular/service-worker": "~13.3.0",
+    "@ng-select/ng-select": "^8.1.1",
     "@ngneat/elf": "^1.5.6",
     "@ngneat/elf-entities": "^4.2.1",
     "bootstrap": "^5.1.3",
