--- a/client/package.json
+++ b/client/package.json
@@ -19,13 +19,13 @@
     "@angular/platform-browser-dynamic": "^14.2.8",
     "@angular/router": "^14.2.8",
     "@angular/service-worker": "^14.2.8",
-    "@ng-select/ng-select": "^8.1.1",
+    "@ng-select/ng-select": "9",
     "@ngneat/elf": "^1.5.6",
-    "@ngneat/elf-entities": "^4.2.1",
+    "@ngneat/elf-entities": "^4.4.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "fuse.js": "^6.5.3",
-    "ngx-bootstrap": "^8.0.0",
+    "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
